-Video Player Bug Fixed on Linux (#14)